--- a/indexPortfolio/portfolio.html
+++ b/indexPortfolio/portfolio.html
@@ -11,16 +11,19 @@
   <body>
     <div class="divBodyOscuro">
       <div class="c_Foto">
-        <div class="fotoPerfil"></div>
+        <div class="fotoPerfil">
+          <img id="foto" src="images/fotoperfil.png">
+        </div>
          <h1 id="titulo">Franco Auditore</h1>
-        <img src="">
+         <h3 id="estudiante">Estudiante</h3>
       </div>
-      <span id="estudiante">Estudiante</span>
       <div class="c_contacto">
         <h3> Contacto </h3>
         <div class="redes">
-          <i class="fa-brands fa-linkedin"></i>
-          <i class="fa-regular fa-envelope"></i>
+          <a href="">
+            <i class="fa-brands fa-linkedin"></i></a>
+          <a href=""><i class="fa-regular fa-envelope"></i></a>
+          <a href=""><i class="fa-brands fa-github"></i></a>
         </div>
       </div>
     </div>
@@ -48,7 +51,7 @@
           </div>
           <hr>
           <div class="lenguajes">
-            <h2>conocimiento en lenguajes</h2>
+            <h2>Skills</h2>
             
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure expedita,
@@ -56,7 +59,9 @@
               adipisicing elit. Possimus, ut. Animi magni libero nobis ipsam?Lorem, ipsum dolor sit
               amet consectetur adipisicing elit. Vero, consequatur.
             </p>
-            <button class="proyectos">Mis proyectos</button>
+              <button class="proyectos">
+                <a target="_blank" href="https://www.google.com/">Mis proyectos </a>      
+                </button>
           </div>
         </div>
       </div>
