--- a/indexPortfolio/portfolio.html
+++ b/indexPortfolio/portfolio.html
@@ -60,7 +60,7 @@
               amet consectetur adipisicing elit. Vero, consequatur.
             </p>
               <button class="proyectos">
-                <a target="_blank" href="https://www.google.com/">Mis proyectos </a>      
+                <a target="_blank" href="../Proyectos/index.html">Mis proyectos </a>      
                 </button>
           </div>
         </div>
