--- a/Proyectos/index.html
+++ b/Proyectos/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,67 +8,72 @@
     <link rel="stylesheet" href="styles.css">
     <title>Proyectos Portfolio</title>
 </head>
+
 <body>
     <h1> Mis proyectos</h1>
     <div class="c_body">
         <!------------row 1----------------->
         <div class="rows">
             <div class="col-1">
-             <img src="images/imagen.png" alt="">
-             <h2>proyecto</h2>
-             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio, maxime consequatur laborum,
-             cupiditate recusandae dignissimos quas a nesciunt necessitatibus provident doloribus rem similique
-             aliquam corrupti accusamus nemo quisquam non reprehenderit magnam dolorem sunt! Consectetur, cupiditate!</p>
-            <button class="btn"><a href="#">Ver proyecto</a></button>          
+                <img src="images/imagen.png" alt="">
+                <h2>proyecto</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio, maxime consequatur laborum,
+                    cupiditate recusandae dignissimos quas a nesciunt necessitatibus provident doloribus rem similique
+                    aliquam corrupti accusamus nemo quisquam non reprehenderit magnam dolorem sunt! Consectetur,
+                    cupiditate!</p>
+                <button class="btn"><a href="#">Ver proyecto</a></button>
             </div>
-         <div class="col-1">
-            <img src="images/imagen.png" alt="">
-            <h2>proyecto</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio, maxime consequatur laborum,
-            cupiditate recusandae dignissimos quas a nesciunt necessitatibus provident doloribus rem similique
-            aliquam corrupti accusamus nemo quisquam non reprehenderit magnam dolorem sunt! Consectetur, cupiditate!</p>
-            <button class="btn"><a href="#">Ver proyecto</a></button> 
-        </div>
-        <div class="col-1">
-            <img src="images/imagen.png" alt="">
-            <h2>proyecto</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio, maxime consequatur laborum,
-            cupiditate recusandae dignissimos quas a nesciunt necessitatibus provident doloribus rem similique
-            aliquam corrupti accusamus nemo quisquam non reprehenderit magnam dolorem sunt! Consectetur, cupiditate!</p>
-            <button class="btn"><a href="#">Ver proyecto</a></button> 
-        </div>
-
+            <div class="col-1">
+                <img src="images/imagen.png" alt="">
+                <h2>proyecto</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio, maxime consequatur laborum,
+                    cupiditate recusandae dignissimos quas a nesciunt necessitatibus provident doloribus rem similique
+                    aliquam corrupti accusamus nemo quisquam non reprehenderit magnam dolorem sunt! Consectetur,
+                    cupiditate!</p>
+                <button class="btn"><a href="#">Ver proyecto</a></button>
+            </div>
+            <div class="col-1">
+                <img src="images/imagen.png" alt="">
+                <h2>proyecto</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio, maxime consequatur laborum,
+                    cupiditate recusandae dignissimos quas a nesciunt necessitatibus provident doloribus rem similique
+                    aliquam corrupti accusamus nemo quisquam non reprehenderit magnam dolorem sunt! Consectetur,
+                    cupiditate!</p>
+                <button class="btn"><a href="#">Ver proyecto</a></button>
+            </div>
         </div>
         <!------------ row 2  --------->
         <div class="rows">
             <div class="col-1">
-             <img src="images/imagen.png" alt="">
-             <h2>proyecto</h2>
-             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio, maxime consequatur laborum,
-             cupiditate recusandae dignissimos quas a nesciunt necessitatibus provident doloribus rem similique
-             aliquam corrupti accusamus nemo quisquam non reprehenderit magnam dolorem sunt! Consectetur, cupiditate!</p>
-            <button class="btn"><a href="#">Ver proyecto</a></button>          
+                <img src="images/imagen.png" alt="">
+                <h2>proyecto</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio, maxime consequatur laborum,
+                    cupiditate recusandae dignissimos quas a nesciunt necessitatibus provident doloribus rem similique
+                    aliquam corrupti accusamus nemo quisquam non reprehenderit magnam dolorem sunt! Consectetur,
+                    cupiditate!</p>
+                <button class="btn"><a href="#">Ver proyecto</a></button>
             </div>
-         <div class="col-1">
-            <img src="images/imagen.png" alt="">
-            <h2>proyecto</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio, maxime consequatur laborum,
-            cupiditate recusandae dignissimos quas a nesciunt necessitatibus provident doloribus rem similique
-            aliquam corrupti accusamus nemo quisquam non reprehenderit magnam dolorem sunt! Consectetur, cupiditate!</p>
-            <button class="btn"><a href="#">Ver proyecto</a></button> 
+            <div class="col-1">
+                <img src="images/imagen.png" alt="">
+                <h2>proyecto</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio, maxime consequatur laborum,
+                    cupiditate recusandae dignissimos quas a nesciunt necessitatibus provident doloribus rem similique
+                    aliquam corrupti accusamus nemo quisquam non reprehenderit magnam dolorem sunt! Consectetur,
+                    cupiditate!</p>
+                <button class="btn"><a href="#">Ver proyecto</a></button>
+            </div>
+            <div class="col-1">
+                <img src="images/imagen.png" alt="">
+                <h2>proyecto</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio, maxime consequatur laborum,
+                    cupiditate recusandae dignissimos quas a nesciunt necessitatibus provident doloribus rem similique
+                    aliquam corrupti accusamus nemo quisquam non reprehenderit magnam dolorem sunt! Consectetur,
+                    cupiditate!</p>
+                <button class="btn"><a href="#">Ver proyecto</a></button>
+            </div>
         </div>
-        <div class="col-1">
-            <img src="images/imagen.png" alt="">
-            <h2>proyecto</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio, maxime consequatur laborum,
-            cupiditate recusandae dignissimos quas a nesciunt necessitatibus provident doloribus rem similique
-            aliquam corrupti accusamus nemo quisquam non reprehenderit magnam dolorem sunt! Consectetur, cupiditate!</p>
-            <button class="btn"><a href="#">Ver proyecto</a></button> 
-        </div>
-
-        </div>
-
     </div>
-    
+
 </body>
+
 </html>
